@@ -7,11 +7,10 @@ import org.jcd2052.api.entities.Game;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class GameDtoFactory {
     public static List<GameDto> createGameDtoList(Collection<Game> games) {
-        return games.stream().map(Game::toGameDto).collect(Collectors.toList());
+        return games.stream().map(Game::toGameDto).toList();
     }
 }
